tests/errors/erro_elseif_scope_leak.lua
function void main()
    if false then
        -- ...
    elseif true then
        local y : integer = 20;
    end
    print(y); -- Erro: y não existe neste escopo
end
